[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydijkstra"
version = "1.0.0"
description = "Package for easily applicable Dijkstra Algorithm."
readme = "README.md"
authors = [{ name = "Niklas Markert", email = "niklas.markert@outlook.de" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["dijkstra", "graph", "pathfinding"]
dependencies = [
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/nmarkert/python-dijkstra"
